# Git_DESU_NC

./: README.md  TP_uv_trinome_2.docx  pyproject.toml  uv_vscode_tutorial.pptx  ~$_uv_trinome_2.docx
Scripts/: DS DATA MANAGEMENT EXEMPLE 2025.ipynb  Test_dev.ipynb  test_appel_function.ipynb  test_functions.ipynb
documents/: DS 2026 Bases_Git_Travail_Collaboratif.pptx  DS 2026 cours_data_science_uv.pptx  DS 2026 python_fonctions_modules_imports.pptx
functions/: basicstats.py
