[project]
name = "Git_DESU_NC"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.3.0",
]

